--- a/sobre.html
+++ b/sobre.html
@@ -21,10 +21,10 @@
 
                 <ul class="navbar">
                     <li><span> <a href="index.html">Home</a></span></li>
-                    <li>Sobre</li>
-                    <li>Últimas Notícias</li>
-                    <li>Contato</li>
-                    <li>Login</li>
+                    <li> <span> <a href="sobre.html"> Sobre</a></span> </li>
+                    <li> <span> <a href="">Últimas Notícias</a> </span> </li>
+                    <li> <span> <a href="">Contato</a> </span> </li>
+                    <li> <span> <a href="login.html">Login</a></span> </li>
                 </ul>
 
             </div>
