--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
             <h1><span class="destaque">Apaixonados</span> por NBA</h1>
 
             <ul class="navbar">
-                <li><span>Home</span></li>
-                <li>
-                    <a href="sobre.html"> Sobre</a>
-                </li>
-                <li>Últimas Notícias</li>
-                <li>Contato</li>
-                <li>Login</li>
+                <li><span> <a href="index.html">Home</a></span></li>
+                <li> <span> <a href="sobre.html"> Sobre</a></span> </li>
+                <li> <span> <a href="">Últimas Notícias</a> </span> </li>
+                <li> <span> <a href="">Contato</a> </span> </li>
+                <li> <span> <a href="login.html">Login</a></span> </li>
             </ul>
 
         </div>
